--- a/src/app/pages/consulta/especial/especial.component.html
+++ b/src/app/pages/consulta/especial/especial.component.html
@@ -63,7 +63,7 @@
             <textarea matInput placeholder="Tratamiento" value="{{d.tratamiento}}"></textarea>
         </mat-form-field>
         <br>
-        <!--button mat-raised-button color="warn" type="button" (click)="removerDiagnostico(i)">Remover</button-->
+        <button mat-raised-button color="warn" type="button" (click)="removerDiagnostico(i)">Remover</button>
 
     </mat-expansion-panel>
 
@@ -81,7 +81,7 @@
     <mat-toolbar *ngFor="let e of examenesSeleccionados; let i=index">
         {{e.nombre}}
         <span class="example-spacer"></span>
-        <!--button mat-raised-button color="warn" type="button" (click)="removerExamen(i)">Remover</button-->
+        <button mat-raised-button color="warn" type="button" (click)="removerExamen(i)">Remover</button>
     </mat-toolbar>
 
     <button mat-raised-button color="primary" type="submit" [disabled]="estadoBotonRegistrar()">Registrar</button>
