--- a/src/app/pages/medico/medico.component.html
+++ b/src/app/pages/medico/medico.component.html
@@ -34,7 +34,7 @@
             <mat-header-cell *matHeaderCellDef> Acciones </mat-header-cell>
             <mat-cell *matCellDef="let row">
                 <button mat-button color="primary" (click)="abrirDialogo()"><mat-icon>ballot</mat-icon></button>
-                <!--button mat-button color="accent" (click)="eliminar()"><mat-icon>delete</mat-icon></button-->
+                <button mat-button color="accent" (click)="eliminar()"><mat-icon>delete</mat-icon></button>
             </mat-cell>
         </ng-container>
 
